--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,12 @@ abbr,address,article,aside,audio,b,blockquote,body,canvas,caption,cite,code,dd,d
 .left-sidebar, .right-sidebar {position:absolute;top:0;}
 .left-sidebar {left: -100%;background: #131313 url(../img/sidebar-background.jpg) repeat-y right;}
 .right-sidebar {left: 100%;background: #131313 url(../img/sidebar-background.jpg) repeat-y right;}
-.content {background-color:#000;position:relative}
+.content {background-color:#000}
 .ui-page-active, .ui-content, .left-sidebar, .right-sidebar, .content {height:auto;min-height:100%;overflow:auto;overflow-x:hidden;}
 .left-sidebar{height:0px}
 .left-sidebar.open{height:777px;}
-.open-left {left:100%;}
-.open-right {left:-100%;}
+/*.open-left {left:100%;}
+.open-right {left:-100%;}*/
 .left-sidebar.open,.right-sidebar.open{left:0;}
 .left-sidebar, .right-sidebar, .content {-webkit-transition: all 0.3s ease-in-out;-moz-transition: all 0.3s ease-in-out;-ms-transition: all 0.3s ease-in-out;-o-transition: all 0.3s ease-in-out;transition: all 0.3s ease-in-out;}
 #main_bar{clear:both;height:30px;text-align:center;}
