--- a/css/style.css
+++ b/css/style.css
@@ -114,10 +114,10 @@ img.img-responsive {display: block;max-width: 100%;height: auto;margin-left: aut
 .main-categories{width:460px;padding-top:30px;margin-bottom:15px;margin-left:auto;margin-right:auto;}
 .category-icon{float:left;width:100px;height:100px;text-align:center;margin:0 15px 15px 0}
 .category-icon a,.category-icon a:hover,.category-icon a:active,.category-icon a:focus,.category-icon a:visited{color:#fff;text-decoration:none}
-.category-icon p{display:block;font-size:12px;font-weight:normal;padding:3px 0;background-color:#000;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;}
+.category-icon p{display:block;font-size:12px;font-weight:normal;padding:3px;background-color:#000;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;}
 @media (max-width:480px){
 	.main-categories{width:100%}
-	.category-icon{width:55px;height:90px;margin:0 10px 20px 10px;overflow:hidden}
+	.category-icon{width:55px;height:90px;margin:0 10px 20px 10px}
 	.category-icon img{width:55px}
 	.category-icon p{font-size:11px}
 }
